--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,6 @@
           "strict": true
         }
       },
-      
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -36,8 +35,7 @@
               "node_modules/leaflet/dist/leaflet.css",
               "node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
             ],
-            
-            "scripts": [ 
+            "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "node_modules/leaflet/dist/leaflet.js",
               "node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.js"
@@ -48,13 +46,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "3mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "10kb",
+                  "maximumError": "20kb"
                 }
               ],
               "fileReplacements": [
@@ -63,7 +61,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true,
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractCss": true,
+              "aot": true,
+              "buildOptimizer": true,
+              "serviceWorker": true
             },
             "development": {
               "buildOptimizer": false,
@@ -106,7 +111,6 @@
               "src/assets"
             ],
             "styles": [
-        
               "src/styles.css"
             ],
             "scripts": []
@@ -115,6 +119,5 @@
       }
     }
   },
-  
   "defaultProject": "uberApp"
 }
